		What has changed in GDB?
	     (Organized release by release)

*** Changes since GDB 14

* GDB now supports printing of ptwrite payloads from the Intel Processor
  Trace during 'record instruction-history', 'record function-call-history'
  and all stepping commands.  The payload is also accessible in Python as a
  RecordAuxiliary object.  Printing is customizable via a ptwrite filter
  function in Python.  By default, the raw ptwrite payload is printed for
  each ptwrite that is encountered.
* GDB now supports watchpoints for tagged data pointers on amd64.

* New convenience variables

$_thread_workgroup
  The workgroup coordinates of the current thread.  Unsigned int vector
  of size 3, when available.  Otherwise, void.

$_workitem_local_id
  The local ID coordinates of the workitem processed by the current context,
  within its thread's workgroup.  Unsigned int vector of size 3, when
  available.  Otherwise, void.

$_workitem_global_id
  The global ID coordinates of the workitem processed by the current context.
  Unsigned int vector of size 3, when available.  Otherwise, void.

$_workitem_local_size
  The number of workitems in the thread's workgroup in every dimension.
  Unsigned int vector of size 3, when available.  Otherwise, void.

$_workitem_global_size
  The overall number of workitems processed by the current workload in every
  dimension.  Unsigned int vector of size 3, when available.  Otherwise, void.

$_kernel_instance_id
  An architecture-specific kernel instance identifier for the kernel processed
  by the thread.  The identifier is unique per kernel submission.  The term
  `kernel` refers to a function that is submitted to and runs on an appropriate
  device, e.g. a GPU device.

* New commands

set scheduler-locking eval | replay eval | replay run | replay step | run | step (on|off)
show scheduler-locking (eval | replay eval | replay run | replay step | run | step)
  Extend the scheduler-locking settings with a set of set/show